fixed text issues on mobile

--- a/app/assets/stylesheets/emails.scss
+++ b/app/assets/stylesheets/emails.scss
@@ -46,7 +46,7 @@ body, html{
 		.motto {
 			font-family: 'Lato', sans-serif;
 			font-weight: 300;
-			font-size: 5em;
+			font-size: 5vw;
 			letter-spacing: 3px;
 			color: #fff;
 			line-height: 1em;
@@ -54,7 +54,7 @@ body, html{
 		.signuptoday {
 			font-family: 'Lato', sans-serif;
 			font-weight: 300;
-			font-size: 1.4em;
+			font-size: 1.4vw;
 			letter-spacing: 3px;
 			color: #fff;
 			margin-top: 2em;
@@ -64,7 +64,7 @@ body, html{
 			font-family: 'Lato', sans-serif;
 			font-weight: 300;
 			letter-spacing: 2px;
-			font-size: 15px;
+			font-size: 1vw;
 			padding-left:15px;
 			height: 37px;
 
@@ -84,7 +84,7 @@ body, html{
 			font-weight: 700;
 			height: 37px;
 			letter-spacing: 3px;
-			font-size: 17px;
+			font-size: 1vw;
 
 			margin-left: 15px;
 			border-radius: 10px;
