--- a/app/assets/stylesheets/refer.scss
+++ b/app/assets/stylesheets/refer.scss
@@ -1,4 +1,4 @@
-`// .refer {
+// .refer {
 // 	position: relative;
 // }
 .helper {
@@ -35,14 +35,14 @@
 		font-family: 'Lato', sans-serif; 
 		font-weight: 300 bold;
 		color: #ffffff;
-		font-size: 35px;
+		font-size: 2vw;
 		text-align: center;
 	}
 	.signup-thanks {
 		font-family: 'Lato', sans-serif; 
 		font-weight: 300;
 		color: #ffffff;
-		font-size: 28px;
+		font-size: 1.5vw;
 		line-height: 20px;
 		text-align: center;
 	}
